2004-01-12  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump corlib version number for real this time.
	
	* AppDomain.cs (LoadAssembly): Pass the assembly name as a string to
	the runtime, so it can take into account the Culture etc.

	* Environment.cs: Bump corlib version number.
	
2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoType.cs: GetMethods renamed to GetMethodsByName. It takes a
	new parameter with the method name and a boolean for ignoring case.
	Removed some string comparisons no longer needed.

2004-01-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoType.cs: GetProperties renamed to GetPropetiesByName. It takes a
	new parameter with the property name and a boolean for ignoring case.
	Fixes bug #52753.

2004-01-11  David Sheldon <dave-mono@earth.li>

	* DateTime.cs: Correct processing of formats with multiple '-'s, fixing
	bug 52274.

2004-01-10  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Keep track of type resolve and assembly resolve 
	events in progress to prevent infinite recursion.

2004-01-06  Miguel de Icaza  <miguel@ximian.com>

	* Console.cs: Test for UTF-8 being present anywhere on the
	string, also do ToUpper instead of ToLower, which will work even
	around the ICU bug with different locales (#52065), and addresses #52101

2004-01-05  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump version.

2003-12-24 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Type.cs (IsNotPublic): One would normally assume that
	IsNotPublic == !IsPublic, but this is not the case (note to MS,
	make better names ;-). Fixes #52547, `Type.IsNotPublic not 
	correct for Nested types'

2003-12-24  Nick Drochak  <ndrochak@ieee.org>

	* Array.cs (CreateInstance): Throw NullRef exception like .NET 1.1, 
	even though docs say it should be an ArgumentNull. Sent email to MS
	about this "bug".

2003-12-23  Lluis Sanchez Gual  <lluis@ximian.com>

	* Exception.cs: Several changes to make it compatible with MS.NET (needed